--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <nav>
       <a href="#features">Contact</a>
       <a href="#faq">About</a>
-      <a href="https://down.kwggame.top/kwg_1.1.8.4.apk" target="_blank">Download</a>
+      <a href="https://download.in777.game/777ING_Kub7vTn3.apk" target="_blank">Download</a>
     </nav>
   </header>
 
@@ -237,3 +237,4 @@
 
 </body>
 </html>
+
