--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <section class="hero">
     <h2>777ing Games Official</h2>
     <p>777ing Game is your ultimate platform for exciting games and daily rewards. Play the best colour prediction game in India on 777ing games, where fun meets real earnings. Join today and win big!</p>
-    <a href="https://earnhaat.com/?code=131497925#/register" class="btn btn-primary">Register Now</a>
+    <a href="http://earnhaat.com/#/register?code=131497925" class="btn btn-primary">Register Now</a>
     <a href="https://earnhaat.com/#/login" class="btn btn-secondary">Login</a>
   </section>
 
@@ -237,4 +237,5 @@
 
 </body>
 </html>
+
 
